[package]
name = "ppio"
version = "0.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
anyhow = "1.0.75"
pin-project-lite = "0.2.13"
# todo (wish): use generic spawn and a non-tokio select macro
tokio = { version = "1.12.0", features = ["rt"] }
futures = "0.3.28"

[dev-dependencies]
# for use in examples :>
tokio = { version = "1.12.0", features = ["full"] }
